about section overflow fix

--- a/client/src/sass/Components/_about.scss
+++ b/client/src/sass/Components/_about.scss
@@ -1,5 +1,7 @@
 .about{
 
+	overflow:hidden;
+
 	&__mission{
 		display:flex;
 		flex-direction: column;
